--- a/data/projects.json
+++ b/data/projects.json
@@ -81,20 +81,23 @@
   {
     "id": "3",
     "slug": "remedial-works-river-state",
-    "title": "Remedial Works to Existing Estate Road River State",
-    "client": "Rivers State Government",
+    "title": "Remedial Works to Existing Estate Road River State and Drainage Works at Iju Road Lagos State",
+    "client": "Rivers State & Lagos State Government",
     "sector": "Infrastructure",
     "service": "General Construction",
-    "location": "River State",
+    "location": "River State & Lagos State",
     "year": "2023",
     "status": "Completed",
     "duration": "8 months",
-    "image": "/images/projects/gwarinpa-estate.jpg",
+    "image": "https://i.postimg.cc/1X2Dx0CC/Screenshot-2025-10-14-at-09-34-47.png",
     "gallery": [
-      "/images/projects/gwarinpa-1.jpg",
-      "/images/projects/gwarinpa-2.jpg",
-      "/images/projects/gwarinpa-3.jpg",
-      "/images/projects/gwarinpa-4.jpg"
+      "https://i.postimg.cc/1X2Dx0CC/Screenshot-2025-10-14-at-09-34-47.png",
+      "https://i.postimg.cc/nVP4QZV8/Screenshot-2025-10-14-at-09-34-54.png",
+      "https://i.postimg.cc/VsVqb1fD/Screenshot-2025-10-14-at-09-35-07.png",
+      "https://i.postimg.cc/qB5sC0JP/Screenshot-2025-10-14-at-09-35-18.png",
+      "https://i.postimg.cc/zDcCR5DY/Screenshot-2025-10-14-at-09-35-51.png",
+      "https://i.postimg.cc/GhTkFNtV/Screenshot-2025-10-14-at-09-35-57.png",
+      "https://i.postimg.cc/VL0jqT5s/Screenshot-2025-10-14-at-09-36-04.png"
     ],
     "overview": "Comprehensive remedial works on existing estate roads including resurfacing, drainage improvements, and infrastructure upgrades to enhance community access and safety.",
     "objectives": [
