Update project images with actual project photos
- Ring Culvert Magodo: 2 actual project images
- Swimming Pool Prime Estate: actual pool construction image
- Ikota Abasi Gas Turbine: 5 actual industrial/energy project images

Replace stock photos with real project photography from postimg.cc

--- a/data/projects.json
+++ b/data/projects.json
@@ -210,11 +210,10 @@
     "year": "2023",
     "status": "Completed",
     "duration": "4 months",
-    "image": "https://images.unsplash.com/photo-1589939705384-5185137a7f0f?w=800",
+    "image": "https://i.postimg.cc/LXdrMVVj/Screenshot-2025-10-14-at-11-58-17.png",
     "gallery": [
-      "https://images.unsplash.com/photo-1589939705384-5185137a7f0f?w=800",
-      "https://images.unsplash.com/photo-1581094271901-8022df4466f9?w=800",
-      "https://images.unsplash.com/photo-1590856029620-0cae5d7c58c7?w=800"
+      "https://i.postimg.cc/LXdrMVVj/Screenshot-2025-10-14-at-11-58-17.png",
+      "https://i.postimg.cc/Ss0wpGGt/Screenshot-2025-10-14-at-11-58-23.png"
     ],
     "overview": "Construction of a major ring culvert system in Magodo to improve water flow management and prevent flooding in the area.",
     "objectives": [
@@ -370,11 +369,9 @@
     "year": "2023",
     "status": "Completed",
     "duration": "6 months",
-    "image": "https://images.unsplash.com/photo-1576610616656-d3aa5d1f4534?w=800",
+    "image": "https://i.postimg.cc/k522FPYh/04d572df-d4aa-47d9-b943-94c593556ff6.jpg",
     "gallery": [
-      "https://images.unsplash.com/photo-1576610616656-d3aa5d1f4534?w=800",
-      "https://images.unsplash.com/photo-1519046904884-53103b34b206?w=800",
-      "https://images.unsplash.com/photo-1560579067-e04b79e0b3f2?w=800"
+      "https://i.postimg.cc/k522FPYh/04d572df-d4aa-47d9-b943-94c593556ff6.jpg"
     ],
     "overview": "Construction of luxury swimming pool facility with integrated water bar at Prime Water View Estate, providing premium recreational amenities for residents.",
     "objectives": [
@@ -410,11 +407,13 @@
     "year": "2024",
     "status": "Completed",
     "duration": "16 months",
-    "image": "https://images.unsplash.com/photo-1473341304170-971dccb5ac1e?w=800",
+    "image": "https://i.postimg.cc/ydY80BMV/Screenshot-2025-10-14-at-11-54-03.png",
     "gallery": [
-      "https://images.unsplash.com/photo-1473341304170-971dccb5ac1e?w=800",
-      "https://images.unsplash.com/photo-1508514177221-188b1cf16e9d?w=800",
-      "https://images.unsplash.com/photo-1497435334941-8c899ee9e8e9?w=800"
+      "https://i.postimg.cc/ydY80BMV/Screenshot-2025-10-14-at-11-54-03.png",
+      "https://i.postimg.cc/j5gdXmT0/Screenshot-2025-10-14-at-11-54-08.png",
+      "https://i.postimg.cc/LXC6TwSF/Screenshot-2025-10-14-at-11-54-15.png",
+      "https://i.postimg.cc/B6YQgk3G/Screenshot-2025-10-14-at-11-54-24.png",
+      "https://i.postimg.cc/SsTNr34h/Screenshot-2025-10-14-at-11-54-30.png"
     ],
     "overview": "Installation and commissioning of gas turbine power generation system at Ikota Abasi, providing reliable power supply for industrial operations.",
     "objectives": [
