feat: remove years from project titles for clean, timeless appearance

--- a/data/projects.json
+++ b/data/projects.json
@@ -345,7 +345,7 @@
   {
     "id": "16",
     "slug": "residential-apartment-2021",
-    "title": "Residential Apartment 2021",
+    "title": "Residential Apartment",
     "client": "Private Developer",
     "sector": "Residential",
     "service": "General Construction",
@@ -456,7 +456,7 @@
   {
     "id": "19",
     "slug": "foundation-works-lekki",
-    "title": "Foundation Works Lekki 2024",
+    "title": "Foundation Works Lekki",
     "client": "Private Developer",
     "sector": "Residential",
     "service": "General Construction",
@@ -567,7 +567,7 @@
   {
     "id": "22",
     "slug": "residential-apartment-lekki-completed",
-    "title": "Residential Apartment Lekki Completed 2024",
+    "title": "Residential Apartment Lekki",
     "client": "Property Investment Group",
     "sector": "Residential",
     "service": "General Construction",
@@ -641,7 +641,7 @@
   {
     "id": "24",
     "slug": "residential-apartment-lekki-2024",
-    "title": "Residential Apartment – Lekki – Completed 2024",
+    "title": "Residential Apartment – Lekki",
     "client": "Estate Developer",
     "sector": "Residential",
     "service": "General Construction",
@@ -678,7 +678,7 @@
   {
     "id": "25",
     "slug": "residential-apartment-eleko-lagos",
-    "title": "Residential Apartment Eleko Lagos 2021",
+    "title": "Residential Apartment Eleko Lagos",
     "client": "Private Developer",
     "sector": "Residential",
     "service": "General Construction",
@@ -715,7 +715,7 @@
   {
     "id": "26",
     "slug": "swimming-pool-port-harcourt",
-    "title": "Swimming Pool Port Harcourt 2024 Completed",
+    "title": "Swimming Pool Port Harcourt",
     "client": "Estate Management Company",
     "sector": "Recreation Infrastructure",
     "service": "General Construction",
