feat: remove 'ongoing' from project titles for cleaner presentation

--- a/data/projects.json
+++ b/data/projects.json
@@ -419,7 +419,7 @@
   {
     "id": "18",
     "slug": "mid-rise-apartments-lagos-ongoing",
-    "title": "Mid-Rise Apartments – Lagos – Ongoing",
+    "title": "Mid-Rise Apartments – Lagos",
     "client": "Real Estate Developer",
     "sector": "Residential",
     "service": "General Construction",
@@ -493,7 +493,7 @@
   {
     "id": "20",
     "slug": "residential-apartment-ikoyi-ongoing",
-    "title": "Finishes, Residential Apartment Ikoyi Ongoing",
+    "title": "Finishes, Residential Apartment Ikoyi",
     "client": "Luxury Property Developer",
     "sector": "Residential",
     "service": "General Construction",
@@ -530,7 +530,7 @@
   {
     "id": "21",
     "slug": "office-complex-ikeja-ongoing",
-    "title": "Office Complex Ikeja Lagos Ongoing",
+    "title": "Office Complex Ikeja Lagos",
     "client": "Corporate Real Estate",
     "sector": "Commercial",
     "service": "General Construction",
@@ -604,7 +604,7 @@
   {
     "id": "23",
     "slug": "office-building-marina-lagos-ongoing",
-    "title": "Office Building, Marina Lagos Ongoing",
+    "title": "Office Building, Marina Lagos",
     "client": "Commercial Property Ltd",
     "sector": "Commercial",
     "service": "General Construction",
